feat: Se implemento dashboard y gestion de usuarios y apuestas :white_check_mark: :construction_worker:
